--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,7 @@
 <resources>
 
-    <color name="black_overlay">#66000000</color>
+    <color name="accent">@color/material_pink_A500</color>
+    <color name="primary">@color/material_teal_500</color>
+    <color name="primary_dark">@color/material_teal_700</color>
 
 </resources>
