--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,6 +48,13 @@
                     android:singleLine="true"/>
             </android.support.design.widget.TextInputLayout>
 
+            <CheckBox
+                android:id="@+id/permission_checkbox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/get_accounts_permission_message"
+                style="@style/Widget.Passport.HintCheckBox" />
+
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/edit_login_password_layout"
                 android:layout_width="match_parent"
