--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -96,6 +96,14 @@
                             android:singleLine="true"/>
 
                     </android.support.design.widget.TextInputLayout>
+
+                    <CheckBox
+                        android:id="@+id/permission_checkbox"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/get_accounts_permission_message"
+                        style="@style/Widget.Passport.HintCheckBox" />
+
                 </LinearLayout>
             </LinearLayout>
 
