--- a/app/src/main/res/layout/item_city_list.xml
+++ b/app/src/main/res/layout/item_city_list.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    android:id="@+id/item_city_list_card_view"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/item_city_list_card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
@@ -22,7 +21,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:foreground="@drawable/mid_grey_ripple"/>
+            android:scaleType="centerCrop"
+            android:foreground="@drawable/mid_grey_ripple" />
 
         <TextView
             android:id="@+id/item_city_list_name"
@@ -38,7 +38,7 @@
             android:paddingEnd="@dimen/spacing_normal"
             android:paddingStart="@dimen/spacing_normal"
             android:textColor="@color/text_primary_dark"
-            android:textSize="28sp"/>
+            android:textSize="28sp" />
 
         <ImageView
             android:id="@+id/item_city_list_remove"
@@ -47,12 +47,17 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
             android:layout_margin="15dp"
-            android:src="@drawable/ic_close_black_36dp"/>
+            android:src="@drawable/ic_close_black_36dp" />
     </RelativeLayout>
 
-    <include
-        layout="@layout/loading"
+    <ProgressBar xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/loading"
+        style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/spacing_huge"
+        android:indeterminate="true"
+        android:indeterminateTint="@color/grey_300"
+        android:indeterminateTintMode="src_in" />
 </android.support.v7.widget.CardView>
