--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,6 @@
 
     <dimen name="detail_backdrop_height">256dp</dimen>
     <dimen name="weather_error_text_size">26sp</dimen>
+    <dimen name="city_banner_text_size">20sp</dimen>
+    <dimen name="spacing_medium">16dp</dimen>
 </resources>
