--- a/app/src/main/res/layout/fragment_city_list.xml
+++ b/app/src/main/res/layout/fragment_city_list.xml
@@ -1,8 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView
-    android:id="@+id/my_recycler_view"
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_below="@+id/action_bar"
-    android:scrollbars="vertical"/>
+    android:layout_height="match_parent">
+
+    <io.romain.passport.ui.views.EmptyRecyclerView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@android:id/list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"/>
+
+    <TextView
+        android:id="@android:id/empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:drawablePadding="25dp"
+        android:drawableTop="@drawable/city_list_empty_view"
+        android:text="@string/city_list_empty_text"
+        android:textSize="16sp"/>
+
+</FrameLayout>
