--- a/app/src/main/res/layout/activity_add_city.xml
+++ b/app/src/main/res/layout/activity_add_city.xml
@@ -19,10 +19,10 @@
         android:layout_marginStart="@dimen/spacing_large"
         android:background="@drawable/dialog_background"
         android:elevation="@dimen/z_floating_action_button"
-        android:paddingBottom="@dimen/padding_normal"
-        android:paddingEnd="@dimen/padding_dialog"
-        android:paddingStart="@dimen/padding_normal"
-        android:paddingTop="@dimen/padding_dialog"
+        android:paddingBottom="@dimen/spacing_medium"
+        android:paddingEnd="@dimen/spacing_large"
+        android:paddingStart="@dimen/spacing_medium"
+        android:paddingTop="@dimen/spacing_large"
         android:transitionName="@string/transition_add_city">
 
         <LinearLayout
@@ -36,7 +36,7 @@
                 style="@style/Widget.Passport.DialogTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/dialog_title_spacing"
+                android:layout_marginBottom="@dimen/spacing_medium"
                 android:layout_marginStart="@dimen/spacing_normal"
                 android:text="@string/add_city_description" />
 
@@ -63,7 +63,7 @@
                 android:id="@+id/actions_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/padding_normal">
+                android:layout_marginTop="@dimen/spacing_medium">
 
                 <Button
                     android:id="@+id/add_city_cancel"
