--- a/app/src/main/res/layout/activity_city_detail.xml
+++ b/app/src/main/res/layout/activity_city_detail.xml
@@ -10,9 +10,11 @@
     tools:context="io.romain.passport.ui.CityDetailActivity">
 
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/city_detail_app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/detail_backdrop_height"
         android:fitsSystemWindows="true"
+        android:transitionName="transition_picture"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
@@ -20,7 +22,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
-            android:transitionName="transition_picture"
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleMarginEnd="32dp"
             app:expandedTitleMarginStart="16dp"
@@ -33,6 +34,7 @@
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
+                android:transitionName="@string/transition_picture"
                 app:layout_collapseMode="parallax" />
 
             <android.support.v7.widget.Toolbar
