--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -1,78 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    android:id="@+id/content_root_view"
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/content_root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/background"
+    <FrameLayout
+        android:id="@+id/landing_splash_screen"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:contentDescription="@android:string/untitled"
-        android:src="@drawable/welcome"
-        android:scaleType="centerCrop"/>
+        android:background="@android:color/black">
 
-    <ImageView
-        android:id="@+id/background_blur"
+        <ImageView
+            android:id="@+id/landing_icon"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
+            android:src="@drawable/logo_no_outline"/>
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|bottom"
+            android:layout_marginBottom="@dimen/spacing_normal"
+            android:text="Loading ..."
+            android:textAllCaps="true"
+            android:textColor="@android:color/white"
+            android:textSize="14sp"/>
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/landing_button_screen"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:contentDescription="@android:string/untitled"
-        android:src="@drawable/welcome_blur"
-        android:scaleType="centerCrop"
-        android:visibility="gone"/>
+        android:alpha="0">
 
-    <io.romain.passport.ui.views.SvgLogoView
-        android:id="@+id/svg_animated_logo"
-        android:layout_width="260dp"
-        android:layout_height="260dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:padding="8dp"
-        app:fillColor="#88ffffff"
-        app:makerSize="16dp"
-        app:resource="@raw/logo_3"
-        app:strokeColor="@android:color/white"
-        app:strokeWidth="4dp"/>
+        <ImageView
+            android:id="@+id/background"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@android:string/untitled"
+            android:scaleType="centerCrop"
+            android:src="@drawable/welcome"/>
 
-    <TextView
-        android:id="@+id/app_name_textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button_register"
-        android:layout_centerHorizontal="true"
-        android:textSize="63sp"
-        android:textColor="@color/accent"
-        android:layout_marginBottom="30dp"
-        android:textStyle="italic"
-        android:text="@string/app_name"/>
+        <ImageView
+            android:id="@+id/background_blur"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="0"
+            android:contentDescription="@android:string/untitled"
+            android:scaleType="centerCrop"
+            android:src="@drawable/welcome_blur"/>
 
-    <TextView
-        android:id="@+id/button_register"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button_login"
-        android:layout_centerHorizontal="true"
-        android:background="@android:color/white"
-        android:gravity="center"
-        android:padding="15dp"
-        android:text="@string/button_register"
-        android:textColor="@android:color/black"
-        android:textSize="22sp"/>
+        <io.romain.passport.ui.views.SvgLogoView
+            android:id="@+id/svg_animated_logo"
+            android:layout_width="260dp"
+            android:layout_height="260dp"
+            android:layout_gravity="center_horizontal|top"
+            android:layout_marginTop="@dimen/spacing_huge"
+            android:padding="8dp"
+            app:fillColor="#88ffffff"
+            app:makerSize="16dp"
+            app:resource="@raw/logo_3"
+            app:strokeColor="@android:color/white"
+            app:strokeWidth="4dp"/>
+
+        <LinearLayout
+            android:id="@+id/landing_button_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="@dimen/spacing_medium"
+            android:alpha="0"
+            android:orientation="horizontal"
+            android:translationY="90dp">
+
+            <TextView
+                android:id="@+id/button_register"
+                style="@style/Widget.Passport.LandingButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/button_register"
+                />
+
+            <TextView
+                android:id="@+id/button_login"
+                style="@style/Widget.Passport.LandingButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/button_login"/>
+        </LinearLayout>
+    </FrameLayout>
 
 
-    <TextView
-        android:id="@+id/button_login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@android:color/black"
-        android:gravity="center"
-        android:padding="15dp"
-        android:text="@string/button_login"
-        android:textColor="@android:color/white"
-        android:textSize="22sp"/>
-
-
-</RelativeLayout>
+</FrameLayout>
