--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/action_bar"
@@ -12,9 +12,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:background="?attr/colorPrimary"
+        android:elevation="@dimen/z_toolbar"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -26,39 +27,78 @@
             android:name="io.romain.passport.ui.fragments.CityListFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:layout="@layout/fragment_city_list" />
+            tools:layout="@layout/fragment_city_list"/>
 
-        <LinearLayout
-            android:id="@+id/detected_position_available_layout"
+        <ViewFlipper
+            android:id="@+id/detected_position_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="64dp"
             android:layout_gravity="top"
-            android:visibility="gone"
             android:background="@drawable/background_accent_ripple"
-            android:orientation="horizontal">
+            android:elevation="@dimen/z_toolbar"
+            android:visibility="gone"
+            tools:visibility="visible">
 
-            <TextView
-                android:id="@+id/detected_position_available_text_view"
-                android:layout_width="0dp"
+            <LinearLayout
+                android:id="@+id/detected_position_available_layout"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:paddingEnd="@dimen/spacing_mini"
-                android:paddingStart="@dimen/spacing_medium"
                 android:layout_gravity="center"
-                android:text="@string/main_are_you_in"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/city_banner_text_size" />
+                android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/detected_position_available_close"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/detected_position_available_text_view"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:paddingEnd="@dimen/spacing_mini"
+                    android:paddingStart="@dimen/spacing_medium"
+                    android:text="@string/main_are_you_in"
+                    android:textColor="@android:color/white"
+                    android:textSize="@dimen/city_banner_text_size"/>
+
+                <ImageView
+                    android:id="@+id/detected_position_available_close"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="?selectableItemBackgroundBorderless"
+                    android:contentDescription="@android:string/cancel"
+                    android:padding="@dimen/spacing_medium"
+                    android:src="@drawable/ic_close_white_24dp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/detected_position_loading_layout"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="?selectableItemBackgroundBorderless"
                 android:layout_gravity="center"
-                android:contentDescription="@android:string/cancel"
-                android:padding="24dp"
-                android:src="@drawable/ic_close_white_24dp" />
-        </LinearLayout>
+                android:orientation="horizontal"
+                android:visibility="gone"
+                tools:visibility="visible">
+
+                <ProgressBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginEnd="@dimen/spacing_normal"
+                    android:layout_marginStart="@dimen/spacing_medium"
+                    android:indeterminate="true"
+                    android:indeterminateTint="@android:color/white"
+                    android:progressTint="@android:color/white"/>
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginEnd="@dimen/spacing_medium_large"
+                    android:layout_weight="1"
+                    android:text="@string/main_saving"
+                    android:textColor="@android:color/white"
+                    android:textSize="@dimen/city_banner_text_size"/>
+            </LinearLayout>
+        </ViewFlipper>
     </FrameLayout>
 
     <android.support.design.widget.CoordinatorLayout
@@ -72,8 +112,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
             android:layout_margin="16dp"
-            android:src="@drawable/ic_add_white_24dp"
-            android:translationZ="@dimen/z_floating_action_button" />
+            android:elevation="@dimen/z_floating_action_button"
+            android:src="@drawable/ic_add_white_24dp"/>
 
     </android.support.design.widget.CoordinatorLayout>
 </RelativeLayout>
