--- a/app/src/main/res/menu/menu_left_drawer.xml
+++ b/app/src/main/res/menu/menu_left_drawer.xml
@@ -10,9 +10,20 @@
         android:id="@+id/navigation_account_subheader"
         android:title="@string/navigation_account_subheader">
         <menu>
+
+            <item
+                android:id="@+id/navigation_account_edit"
+                android:icon="@drawable/ic_account_circle_black_24dp"
+                android:title="@string/navigation_account_edit"/>
+
+            <item
+                android:id="@+id/navigation_account_help"
+                android:icon="@drawable/ic_help_black_24dp"
+                android:title="@string/navigation_account_help_title"/>
+
             <item
                 android:id="@+id/navigation_account_logout"
-                android:icon="@drawable/ic_account_circle_black_24dp"
+                android:icon="@drawable/ic_exit_to_app_black_24dp"
                 android:title="@string/logout_title"/>
         </menu>
     </item>
