--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,13 +15,19 @@
     </style>
 
     <!-- Base application theme. -->
-    <style name="Passport.Home" />
+    <style name="Passport.Home">
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+    </style>
 
-    <style name="Passport.Register" />
+    <style name="Passport.Register"/>
 
-    <style name="Passport.Login" />
+    <style name="Passport.Login"/>
 
-    <style name="Passport.Main" />
+    <style name="Passport.Main">
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+    </style>
 
     <style name="Passport.Translucent">
         <!-- using a semi-transparent window background for the drag-back gesture -->
@@ -54,7 +60,7 @@
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
     </style>
 
-    <style name="Widget.Passport" parent="android:Widget" />
+    <style name="Widget.Passport" parent="android:Widget"/>
 
     <style name="Widget.Passport.DialogText">
         <item name="android:textAppearance">@style/TextAppearance.DialogContent</item>
@@ -82,6 +88,17 @@
         <item name="android:textColor">@color/text_secondary_dark</item>
         <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:letterSpacing">0.01</item>
+    </style>
+
+    <style name="Widget.Passport.LandingButton">
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:layout_margin">@dimen/spacing_medium</item>
+        <item name="android:background">@drawable/background_ripple_transparent_white_stroke</item>
+        <item name="android:gravity">center</item>
+        <item name="android:padding">15dp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">18sp</item>
     </style>
 
 </resources>
