--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,6 @@
 <resources>
 
-    <style name="Passport.LoadingScreen" parent="Theme.AppCompat.Light">
-        <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryDark">@color/primary_dark</item>
-        <item name="colorAccent">@color/accent</item>
-    </style>
+
 
     <!-- Base application theme. -->
     <style name="Passport" parent="Theme.AppCompat.Light.NoActionBar">
@@ -18,6 +14,14 @@
         <item name="android:windowActivityTransitions">true</item>
 
         <item name="drawerArrowStyle">@style/Widget.Passport.DrawerArrowToggle</item>
+    </style>
+
+    <style name="Passport.LoadingScreen">
+        <item name="android:windowBackground">@color/primary_dark</item>
+    </style>
+
+    <style name="Passport.LoadingScreen.Black">
+        <item name="android:windowBackground">@android:color/black</item>
     </style>
 
     <style name="Passport.Home">
