--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -9,7 +9,7 @@
         android:id="@+id/landing_splash_screen"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/black">
+        android:background="@color/primary_dark">
 
         <ImageView
             android:id="@+id/landing_icon"
